# portals_tracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  blogpost.md
examples/: hello_world.cpp  polygon_test.cpp  portal_in_portal_anim.cpp  portal_in_portal_path_tracing.cpp  portal_light.cpp  portal_light_test.cpp  portal_light_test2.cpp  portals.cpp  portals.h  propeller.cpp  pt_window.cpp  pt_window.h  scene_raytracing.cpp  standard_scene_2.cpp  standart_scene.cpp  texture_polygon_test.cpp  transparent_light.cpp  transparent_test.cpp  twg_use.cpp  window_progress.cpp  window_progress.h
include/pt/: basics.h  camera.h  image.h  object.h  poly.h  pt.h  pt2easybmp.h  pt2twg.h  renderer.h  renderer1.h  transformation.h  vector.h  vector2.h
include/pt/camera/: 360.h  orthogonal.h
include/pt/material/: light.h  portals.h  reflect.h  refract.h  scatter.h
include/pt/object/: cubemap.h  mathroom.h  scene.h  scene2.h  sky.h  texture_polygon.h
include/pt/renderer/: path-tracing.h  ray-tracing.h  thread-renderer.h
include/pt/shape/: contour.h  cylinder.h  polygon.h  portals.h  sphere.h  triangle.h
scene_raytracing/: CMakeLists.txt
scene_raytracing/mini-botnet/: README.md
scene_raytracing/mini-botnet/client_rendering/: client.py  client.service  run  setting_up.sh
scene_raytracing/mini-botnet/server_rendering/: run  server.py  server.service  setting_up.sh
scene_raytracing/mini-botnet/server_rendering/static/: what_to_do
src/: 360.cpp  basics.cpp  camera.cpp  contour.cpp  cubemap.cpp  cylinder.cpp  image.cpp  light.cpp  mathroom.cpp  orthogonal.cpp  path-tracing.cpp  poly.cpp  polygon.cpp  portals.cpp  pt2easybmp.cpp  pt2twg.cpp  ray-tracing.cpp  reflect.cpp  refract.cpp  renderer.cpp  renderer1.cpp  scatter.cpp  scene.cpp  scene2.cpp  sky.cpp  sphere.cpp  texture_polygon.cpp  thread_partially_render.cpp  transformation.cpp  triangle.cpp  vector.cpp
